# OpticalPooledScreens_DL

./: .gitignore  README.md  pyproject.toml
notebooks/cellprofiler_benchmark/: cellprofiler_benchmark.ipynb  process_phenotype.py  process_phenotype_nt.py  subset_nontargeting.py  subset_nontargeting.sh
notebooks/diane/: get_vgg_results.py
scripts/data/: load.py  load.sh  split.py
scripts/diane/: 20240902_da_static_benchmark_nontargeting.py  20240902_da_static_benchmark_nontargeting_nonlinear.py  20240902_da_static_training_loop.py  train_vgg.py
scripts/evaluate/: evaluate_VAE.py  evaluate_classifier.py  visualize_VAE.py  visualize_VIEWS.py  visualize_latent.py
scripts/matteo/: evaluate_resnet18.py  train_resnet18.py  train_vgg.py
scripts/matteo/old/: train_second_model_unet_encdec.py  training_loop_basic_md.py  training_loop_cond_test_md.py  training_loop_resnet18_linear_md.py  training_loop_resnet18_md.py
scripts/train/: train_resnet18.py  train_resnet18_classifier.py  train_vgg.py  train_vgg_classifier.py
slurm/: evaluate_VAE.sh  evaluate_classifier.sh  load.sh  resnet18_VAE.sh  resnet18_VAE_interphase_100_large.sh  resnet18_VAE_interphase_100_small.sh  resnet18_VAE_mitotic_large.sh  resnet18_VAE_mitotic_small.sh  resnet18_classify.sh  split.sh  vgg_classify.sh
src/data/: dataloader.py  dataset.py  splitter.py  utils.py
src/eval/: classifier_eval.py  evaluate_static.py  vae_eval.py
src/models/: VAE_resnet18.py  VAE_vanilla.py  vgg2d.py
